--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/estilos.css">
     <title>SafeGPS</title>
 </head>
 <body>
     <!--Navbar-->
 
     <!--Cabecera-->
-
+    <section class="Cabecera">
+        <div class="containerC">
+            <div class="boxC col1">
+                <h2>VIVE SEGURO</h2>
+                <h1>VE LIBRE</h1>
+                <h1>VE SAFE</h1>
+                <p id="txtCabecera">
+                    Viaja con confianza en la ciudad. Descubre Lima de manera segura con nuestra app.
+                </p>
+                <div>
+                    <a href="" class="btnCabecera">CONOCE MÁS</a>
+                </div>
+            </div>
+            <div class="boxC col2">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1KH1NCdYHPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
     <!--Servicios-->
 
     <!--Nosotros (Nuestra ventajas)-->
