--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="boxC col2">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1KH1NCdYHPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1KH1NCdYHPw?mute=1&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </section>
