--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     <!--Cabecera-->
     <section class="Cabecera">
         <div class="containerC">
-            <div class="boxC col1">
-                <h2>VIVE SEGURO</h2>
-                <h1>VE LIBRE</h1>
-                <h1>VE SAFE</h1>
+            <div class="CabeceraC1">
+                <h2 id="h2Cabecera">VIVE SEGURO</h2>
+                <h1 id="h1Cabecera">VE LIBRE</h1>
+                <h1 id="h1Cabecera">VE SAFE</h1>
                 <p id="txtCabecera">
                     Viaja con confianza en la ciudad. Descubre Lima de manera segura con nuestra app.
                 </p>
@@ -24,7 +24,7 @@
                     <a href="" class="btnCabecera">CONOCE MÁS</a>
                 </div>
             </div>
-            <div class="boxC col2">
+            <div class="CabeceraC2">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1KH1NCdYHPw?mute=1&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
