formulario con fondo

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <!--Carrucel-->
 
     <!--contacto-->
-  
+
+    <section class="Contacto">
         <form class="form">
             <h2 class="form_title">Contacto</h2>
             <p class="form_paragraph"> LLena el formulario para contactarnos</p>
@@ -60,8 +61,10 @@
             </div>
 
             <input type="submit" class="form_submit" value="Enviar">
-
         </form>
+    </section>
+  
+       
 
   
     <!--Footer-->
