Nuestros Servicios Maquetado

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/assets/styles/estilos.css" />
     <title>SafeGPS</title>
 </head>
 <body>
-    <h1>Nosotros</h1>
-    <!--Maquetacion-->
+
+    <!--Nosotros-->
+    <section class="ventajas-section">
+        <h2 class="ventajas-title">NUESTRAS VENTAJAS</h2>
+        <div class="ventajas-container">
+          <div class="ventaja-column">
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 1" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">NAVEGA SEGURO</h3>
+                <p class="ventaja-descripcion">
+                  Permite a los usuarios encontrar rutas seguras para transitar en
+                  Lima.
+                </p>
+              </div>
+            </div>
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 2" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">ALERTAS EN VIVO</h3>
+                <p class="ventaja-descripcion">
+                  Envía alertas en tiempo real a los usuarios sobre situaciones de
+                  riesgo.
+                </p>
+              </div>
+            </div>
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 3" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">INFORMACIÓN</h3>
+                <p class="ventaja-descripcion">
+                  Proporciona información actualizada sobre los índices de
+                  criminalidad en diferentes zonas de Lima.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="ventaja-column">
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 4" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">MONITOREO</h3>
+                <p class="ventaja-descripcion">
+                  Proporciona un monitoreo en tiempo real de la ubicación de los
+                  usuarios y agentes de ayuda.
+                </p>
+              </div>
+            </div>
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 5" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">COMUNIDAD</h3>
+                <p class="ventaja-descripcion">
+                  Los usuarios pueden compartir información, consejos y
+                  experiencias en su vida diaria.
+                </p>
+              </div>
+            </div>
+            <div class="ventaja">
+              <div class="ventaja-imagen">
+                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 6" />
+              </div>
+              <div class="ventaja-info">
+                <h3 class="ventaja-titulo">SIMPLE</h3>
+                <p class="ventaja-descripcion">
+                  GPSafe tiene una interfaz amigable e intuitiva para el usuario.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="ventaja-column">
+            <div class="ventaja-grande">
+              <img src="/public/assets/images/novedad_diaria_img.png" alt="Ventaja grande" />
+            </div>
+          </div>
+        </div>
+      </section>
     
 </body>
 </html>
