--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/assets/styles/estilos.css"/>
+    <link rel="stylesheet" href="assets/styles/estilos.css">
     <title>SafeGPS</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
           <div class="ventaja-column">
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 1" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 1" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">NAVEGA SEGURO</h3>
@@ -35,7 +35,7 @@
             </div>
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 2" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 2" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">ALERTAS EN VIVO</h3>
@@ -47,7 +47,7 @@
             </div>
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 3" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 3" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">INFORMACIÓN</h3>
@@ -61,7 +61,7 @@
           <div class="ventaja-column">
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 4" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 4" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">MONITOREO</h3>
@@ -73,7 +73,7 @@
             </div>
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 5" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 5" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">COMUNIDAD</h3>
@@ -85,7 +85,7 @@
             </div>
             <div class="ventaja">
               <div class="ventaja-imagen">
-                <img src="/public/assets/images/cuadrado_ventaja.png" alt="Ventaja 6" />
+                <img src="assets/images/cuadrado_ventaja.png" alt="Ventaja 6" />
               </div>
               <div class="ventaja-info">
                 <h3 class="ventaja-titulo">SIMPLE</h3>
@@ -97,7 +97,7 @@
           </div>
           <div class="ventaja-column">
             <div class="ventaja-grande">
-              <img src="/public/assets/images/novedad_diaria_img.png" alt="Ventaja grande" />
+              <img src="assets/images/novedad_diaria_img.png" alt="Ventaja grande" />
             </div>
           </div>
         </div>
