despues del pull a Develop

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,36 @@
         </div>
     </section>
     <!--Servicios-->
+    <section class="services" id="services">
+      <div class="containerS">
+        <div class="boxS">
+          <h3>Novedades</h3>
+          <img src="assets/images/wsp 1.png" alt="">
+          <p>
+            Proximas actualizaciones, noticias e historias de exito
+            de nuestros usuarios y equipo
+          </p>
+        </div>
+  
+        <div class="boxS">
+          <h3 class="serv">Servicios</h3> 
+          <img src="assets/images/wsp 2.png" alt="">
+          <p>
+              Navegacion por zona segura, alertas de seguridad,
+              informacion sobre el crimen y monitoreo en tiempo
+              real
+          </p>
+        </div>
+  
+        <div class="boxS">
+          <h3>Productos</h3>
+          <img src="assets/images/wsp 3.png" alt="">
+          <p>
+              GPSafe App, GPSafe API, GPSafe Analytics, GPSafe Premium
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!--Nosotros (Nuestra ventajas)-->
 
