--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,18 @@
     <title>SafeGPS</title>
 </head>
 <body>
+<!--Navbar-->
+
+<header class="navbar">
+  <img src="imagenes/logo2safegps.png" class="imgBanner" alt="logo">
+  <ul>
+    <li><a class="active" href="#">Inicio</a></li>
+    <li><a href="#">Sobre nosotros</a></li>
+    <li><a href="#">Servicio</a></li>
+    <li><a href="#">GPS</a></li>
+    <li><a href="#">Contacto</a></li>
+  </ul>
+</header>
 
     <!--Cabecera-->
     <section class="Cabecera">
