--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <!--Navbar-->
 
 <header class="navbar">
-  <img src="assets/images/Logo.jpeg" class="imgBanner" alt="logo">
+  <img src="assets/images/logo.png" class="imgBanner" alt="logo">
   <ul>
     <li><a class="active" href="#">Inicio</a></li>
     <li><a href="#">Sobre nosotros</a></li>
