navbar con movimiento

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 <body>
 <!--Navbar-->
 
-<header class="navbar">
+<header class="navbar" id="navbar">
   <img src="assets/images/logo.png" class="imgBanner" alt="logo">
   <ul>
-    <li><a class="active" href="#">Inicio</a></li>
-    <li><a href="#">Sobre nosotros</a></li>
-    <li><a href="#">Servicio</a></li>
+    <li><a class="active" href="#navbar">Inicio</a></li>
+    <li><a href="#us">Sobre nosotros</a></li>
+    <li><a href="#services">Servicio</a></li>
     <li><a href="#">GPS</a></li>
-    <li><a href="#">Contacto</a></li>
+    <li><a href="#contact">Contacto</a></li>
   </ul>
 </header>
 
@@ -76,7 +76,7 @@
 
     
     <!--Nosotros-->
-    <section class="ventajas-section">
+    <section class="ventajas-section" id="us">
         <h2 class="ventajas-title">NUESTRAS VENTAJAS</h2>
         <div class="ventajas-container">
           <div class="ventaja-column">
@@ -166,7 +166,7 @@
 
     <!--contacto-->
 
-    <section class="Contacto">
+    <section class="Contacto" id="contact">
         <form class="form">
             <h2 class="form_title">Contacto</h2>
             <p class="form_paragraph"> LLena el formulario para contactarnos</p>
