--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,18 @@
         </form>
     </section>
     <!--Footer-->
-    
+      <footer class="footer">
+        <ul>
+          <li><a href="#" class="no-highlight">www.safegps.com</a></li>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Sobre nosotros</a></li>
+          <li><a href="#">Servicio</a></li>
+          <li><a href="#">GPS</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+        <img src="assets/images/logo.png" class="imgBanner" alt="logo">
+      </footer>
+
+   
 </body>
 </html>
