links del footer enlazados

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <header class="navbar" id="navbar">
   <img src="assets/images/logo.png" class="imgBanner" alt="logo">
   <ul>
-    <li><a class="active" href="#navbar">Inicio</a></li>
+    <li><a class="active" href="index.html">Inicio</a></li>
     <li><a href="#us">Sobre nosotros</a></li>
     <li><a href="#services">Servicio</a></li>
     <li><a href="#">GPS</a></li>
@@ -214,10 +214,10 @@
         <ul>
           <li><a href="#" class="no-highlight">www.safegps.com</a></li>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
-          <li><a href="#">Servicio</a></li>
+          <li><a href="#us">Sobre nosotros</a></li>
+          <li><a href="#services">Servicio</a></li>
           <li><a href="#">GPS</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
         <img src="assets/images/logo.png" class="imgBanner" alt="logo">
       </footer>
