referencia boton conoce mas

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                     Viaja con confianza en la ciudad. Descubre Lima de manera segura con nuestra app.
                 </p>
                 <div>
-                    <a href="" class="btnCabecera">CONOCE MÁS</a>
+                    <a href="us" class="btnCabecera">CONOCE MÁS</a>
                 </div>
             </div>
             <div class="CabeceraC2">
