--- a/public/index.html
+++ b/public/index.html
@@ -162,8 +162,7 @@
         </div>
       </section>
 
-      <!--Carrucel-->
-
+      
     <!--contacto-->
 
     <section class="Contacto" id="contact">
@@ -209,6 +208,34 @@
             <input type="submit" class="form_submit" value="Enviar">
         </form>
     </section>
+
+<!--Carrucel-->
+<div id="newsspec-19854-app" class="news-app-promo">
+  <div class="news-app-promo-text">
+      <div class="news-app-promo-text__tagline">Recorre las calles seguro</div><br>
+      <div class="news-app-promo-text__download">Download SafeGPS.</div>
+  </div>
+  <div class="news-app-promo__section">
+      <div class="news-app-promo-subsection">
+          <img class="news-app-promo__safe-logo" src="assets/images/logo.png" width="106" height="106">
+      </div>
+      <div class="news-app-promo-subsection">
+          <a class="news-app-promo-subsection--link news-app-promo-subsection--playstore" href="" target="_parent">
+              <img class="news-app-promo__play-store" src="//news.files.bbci.co.uk/include/newsspec/19854/assets/app-project-assets/google_play_store.svg" width="161" height="auto" border="0">
+          </a>
+          <a class="news-app-promo-subsection--link news-app-promo-subsection--appstore" href="" target="_parent">
+              <img class="news-app-promo__app-store" src="//news.files.bbci.co.uk/include/newsspec/19854/assets/app-project-assets/ios_app_store.svg" width="161" height="auto" border="0">
+          </a>
+      </div>
+  </div>
+  <div class="news-app-promo__section">
+
+  </div>
+</div>
+
+
+
+
     <!--Footer-->
       <footer class="footer">
         <ul>
