--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/estilos.css">
+    <script src="assets/scripts/main.js"></script>
     <title>SafeGPS</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
     <li><a class="active" href="index.html">Inicio</a></li>
     <li><a href="#us">Sobre nosotros</a></li>
     <li><a href="#services">Servicio</a></li>
-    <li><a href="#">GPS</a></li>
+    <li><a href="#newsspec-19854-app">Descargar</a></li>
     <li><a href="#contact">Contacto</a></li>
   </ul>
 </header>
@@ -205,7 +206,7 @@
                
             </div>
 
-            <input type="submit" class="form_submit" value="Enviar">
+            <input type="submit" class="form_submit" value="Enviar" onclick="mostrarAlerta()">
         </form>
     </section>
 
@@ -243,7 +244,7 @@
           <li><a href="#">Inicio</a></li>
           <li><a href="#us">Sobre nosotros</a></li>
           <li><a href="#services">Servicio</a></li>
-          <li><a href="#">GPS</a></li>
+          <li><a href="#newsspec-19854-app">Descaragar</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
         <img src="assets/images/logo.png" class="imgBanner" alt="logo">
