agregar imagenes descarga

--- a/public/index.html
+++ b/public/index.html
@@ -222,10 +222,10 @@
       </div>
       <div class="news-app-promo-subsection">
           <a class="news-app-promo-subsection--link news-app-promo-subsection--playstore" href="" target="_parent">
-              <img class="news-app-promo__play-store" src="//news.files.bbci.co.uk/include/newsspec/19854/assets/app-project-assets/google_play_store.svg" width="161" height="auto" border="0">
+              <img class="news-app-promo__play-store" src="assets/images/store.png" width="161" height="auto" border="0">
           </a>
           <a class="news-app-promo-subsection--link news-app-promo-subsection--appstore" href="" target="_parent">
-              <img class="news-app-promo__app-store" src="//news.files.bbci.co.uk/include/newsspec/19854/assets/app-project-assets/ios_app_store.svg" width="161" height="auto" border="0">
+              <img class="news-app-promo__app-store" src="assets/images/aple.png" width="161" height="auto" border="0">
           </a>
       </div>
   </div>
